# set-berendsen-pdamp

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  run_tests.sh  set_berendsen_pdamp.py  setup.py
.github/workflows/: python-package-conda.yml  python-package.yml
README/: plot_Pdamp_vs_P0.py  plot_Pdamp_vs_f.py  plot_pdamp_vs_f.py
container/: Dockerfile  docker_build.sh  python_3.11_lammps_29aug2024.def  python_3.11_lammps_2aug2023.def  singularity_build.sh
examples/Ni_EAM_solid/input/: config.json  potential.lmp  stage1_template.lmp  stage2_template.lmp
tests/: __init__.py  pdamp_samples.json  sample_pdamp.py  test_set_berendsen_pdamp.py  test_set_berendsen_pdamp_optimization.py  tests.py
tests/input/: config.json  stage1.data  stage1_expected.lmp  stage1_template.lmp  stage2_expected.lmp
